# Materialist_Global_Emotional_State

./: .gitignore  FINAL_SYSTEM_DOCUMENTATION.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_GUIDE.md  README.md  demo_usa.py  implementation_roadmap.md  pyproject.toml  test_mges.py  test_phase2_integration.py  test_phase3_complete.py
api_server/: app.py  requirements.txt
mges/: __init__.py  enhanced_data_sources.py  historical_analysis.py  materialist_data_sources.py  materialist_ges_engine.py  theoretical_weighting.py
web_interface/: package-lock.json  package.json
web_interface/public/: index.html
web_interface/src/: App.js
web_interface/src/components/: ConfidenceIndicator.js  ConsciousnessAnalysis.js  HistoricalTrends.js  MaterialistDashboard.js  ParameterControls.js  RegionSelector.js
web_interface/src/contexts/: MaterialistDataContext.js
